mirror.gcr.io because docker doesn't want my money

--- a/turboctl/tpl/turbo-deploy.yml
+++ b/turboctl/tpl/turbo-deploy.yml
@@ -16,10 +16,8 @@ spec:
     spec:
       containers:
       - name: turbokube
-        image: registry.digitalocean.com/turbokube/turbokube
+        image: mirror.gcr.io/pantopic/turbokube
         imagePullPolicy: IfNotPresent
-        imagePullSecrets:
-        - name: registry-turbokube
         args:
         - /turbokube
         - --provider-config
