--- a/turboctl/tpl/turbo-deploy.yml
+++ b/turboctl/tpl/turbo-deploy.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: turbokube
 spec:
-  replicas: {{ .Replicas }}
+  replicas: {{ .VNodes }}
   selector:
     matchLabels:
       app: {{ .Name }}
