--- a/turboctl/tpl/load-deploy.yml
+++ b/turboctl/tpl/load-deploy.yml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: {{ .Name }}
     spec:
+      schedulerName: {{ .Scheduler.Name }}
       containers:
       - name: turbokube
         image: gcr.io/google_containers/pause:1.0
