fix scheduler deployment template

--- a/turboctl/tpl/scheduler.deployment.yml
+++ b/turboctl/tpl/scheduler.deployment.yml
@@ -52,4 +52,4 @@ spec:
       tolerations:
       - key: pantopic/turbokube
         value: scheduler
-        operator: Exists
+        operator: Equal
