--- a/turboctl/tpl/scheduler.configmap.yml
+++ b/turboctl/tpl/scheduler.configmap.yml
@@ -11,3 +11,6 @@ data:
       - schedulerName: {{ .Scheduler.Name }}
     leaderElection:
       leaderElect: false
+    clientConnection:
+      qps: 800
+      burst: 1200
